--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-kapt"
 
 android {
     compileSdkVersion 29
@@ -30,7 +31,39 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
+
+    //material
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+
+    //coordinator layout
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
+    //constraint layout
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    //live data and view model
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    //dagger
+    implementation "com.google.dagger:dagger:2.24"
+    kapt "com.google.dagger:dagger-compiler:2.20"
+    compileOnly "org.glassfish:javax.annotation:3.1.1"
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //rx
+    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+    implementation("io.reactivex.rxjava2:rxkotlin:2.4.0")
+
+
+    //tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    androidTestImplementation 'org.mockito:mockito-android:2.6.3'
+    testImplementation 'org.mockito:mockito-inline:2.11.0'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 }
